trunk/Archive2/68/f639c612d2058c/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In constructor 'A::A()':
main.cpp:8:9: error: 'cout' was not declared in this scope
         cout<<"\nin A const";
         ^
main.cpp:8:9: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp: In destructor 'A::~A()':
main.cpp:12:9: error: 'cout' was not declared in this scope
         cout<<"\nin A dest";
         ^
main.cpp:12:9: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
